data/derived/comb/progs/unify/prog7248.ml.out
Characters 112-138:
  let (_, res) = List.fold_left f base args in
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a * 'b
